--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.css
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.css
@@ -131,9 +131,10 @@
      object-fit: cover;
 }
 #header .header__userpanel--dropdown {
+  z-index: 10;
   background-color: white;
   box-sizing: border-box;
-  border: 1px solid var(--highlightColor);
+  border: 1px solid rgb(128, 128, 128);
   width: 150px;
   height: auto;
   padding: 15px 0;
@@ -356,6 +357,7 @@
   font-weight: 600;
 }
 #nav .nav__dropdown {
+  z-index: 9;
   border: 1px solid var(--defaultColor);
   box-sizing: border-box;
   background-color: tan;
@@ -544,7 +546,6 @@
   width: 1250px;
   height: 400px;
   box-sizing: border-box;
-  border: 1px solid red;
   background-color: mediumturquoise;
   display: flex;
   flex-direction: column;
@@ -595,7 +596,6 @@
   width: 1250px;
   height: 600px;
   box-sizing: border-box;
-  border: 1px solid red;
   background-color: darkseagreen;
   display: flex;
   justify-content: center;
@@ -644,7 +644,6 @@
   width: 1250px;
   height: 400px;
   box-sizing: border-box;
-  border: 1px solid red;
   background-color: gold;
   display: block;
 }
@@ -758,10 +757,205 @@
   justify-content: space-between;
 }
 
-#popups {
+#popups .overlay-bolder {
+  position: fixed;
+  width: 100%;
+  height: 100%;
   box-sizing: border-box;
-  border: 1px solid var(--highlightColor);
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
+#popups .overlay-blurbg {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+}
+#popups .privacypolicy {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid rgb(128, 128, 128);
+  background-color: rgb(255, 255, 255);
+  width: 450px;
+  height: 600px;
+  overflow: scroll;
+  padding: 20px;
+}
+#popups .privacypolicy__cross {
+  position: relative;
+  left: 95%;
+  border: none;
+  background-color: transparent;
+  color: var(--defaultColor);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-weight: 600;
+  font-size: 18px;
+}
+#popups .privacypolicy__text {
+  margin-top: 20px;
+  font-size: 16px;
+  background-color: rgb(255, 255, 255);
+  color: var(--defaultColor);
+}
+#popups .termsofuse {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid rgb(128, 128, 128);
+  background-color: rgb(255, 255, 255);
+  width: 450px;
+  height: 600px;
+  overflow: scroll;
+  padding: 20px;
+}
+#popups .termsofuse__cross {
+  position: relative;
+  left: 95%;
+  border: none;
+  background-color: transparent;
+  color: var(--defaultColor);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-weight: 600;
+  font-size: 18px;
+}
+#popups .termsofuse__text {
+  margin-top: 20px;
+  font-size: 16px;
+  background-color: rgb(255, 255, 255);
+  color: var(--defaultColor);
+}
+#popups .comingsoon {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid rgb(128, 128, 128);
+  background-color: rgb(255, 255, 255);
+  width: 500px;
+  height: 400px;
+  border-radius: 10px;
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+}
+#popups .comingsoon__cross {
+  position: relative;
+  top: 10px;
+  left: 45%;
+  border: none;
+  background-color: transparent;
+  color: var(--defaultColor);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-weight: 600;
+  font-size: 18px;
+  transition: var(--slow-fx);
+}
+#popups .comingsoon__cross:hover {
+  filter: brightness(1.2);
+  scale: 1.05;
+  transition: var(--slow-fx);
+}
+#popups .comingsoon__image {
+  border: 6px solid rgb(0, 0, 0);
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  background-color: rgb(255, 255, 0);
+  animation: alert 1.1s ease-in-out 0s 1;
+}
+#popups .comingsoon__image--symbol {
+  width: 70%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#popups .comingsoon__text {
+  font-size: 20px;
+  filter: drop-shadow(0px 0px 5px rgb(255, 0, 0));
+  color: rgb(8, 0, 0);
+}
+#popups .comingsoon__ok {
+  margin-bottom: 40px;
+  width: 70px;
+  height: 34px;
+  font-size: 16px;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  background-color: rgb(16, 16, 16);
+  transition: var(--slow-fx);
+}
+#popups .comingsoon__ok:hover {
+  filter: brightness(1.2);
+  scale: 1.05;
+  transition: var(--slow-fx);
+}
+@keyframes alert {
+  0% {
+    rotate: 0deg;
+  }
+  10% {
+    rotate: 0deg;
+  }
+  20% {
+    rotate: 30deg;
+  }
+  30% {
+    rotate: -25deg;
+  }
+  40% {
+    rotate: 20deg;
+  }
+  50% {
+    rotate: -15deg;
+  }
+  60% {
+    rotate: 10deg;
+  }
+  70% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 0deg;
+  }
+}
+
 #section-auth {
   box-sizing: border-box;
   border: 1px solid var(--highlightColor);
