--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.scss
@@ -169,8 +169,11 @@
                 object-fit: cover;
             }
             &--dropdown {
+                z-index: 10;
                 background-color: white;
-                @include test-border;
+                // @include test-border;
+                box-sizing: border-box;
+                border: 1px solid rgb(128,128,128);
                 width: 150px;
                 // height: 180px;
                 height: auto;
@@ -385,6 +388,7 @@
             font-weight: 600;
         }
         &__dropdown {
+            z-index: 9;
             border: 1px solid var(--defaultColor);
             box-sizing: border-box;
             background-color: tan;
@@ -588,7 +592,7 @@
         width: 1250px;
         height: 400px;
         box-sizing: border-box;
-        border: 1px solid red;
+        // border: 1px solid red;
         background-color: mediumturquoise;
         display: flex;
         flex-direction: column;
@@ -639,7 +643,7 @@
         width: 1250px;
         height: 600px;
         box-sizing: border-box;
-        border: 1px solid red;
+        // border: 1px solid red;
         background-color: darkseagreen;
         @include df-center();
         flex-wrap: wrap;
@@ -686,7 +690,7 @@
         width: 1250px;
         height: 400px;
         box-sizing: border-box;
-        border: 1px solid red;
+        // border: 1px solid red;
         background-color: gold;
         display: block;
         &__header {
@@ -809,24 +813,178 @@
 // ◄◄|==========|==========|==========|==========|==========|==========|►►
 // ►►►►►►►►►►| #(POP-UP WINDOWS) start |•
 #popups {
-    @include test-border;
-    .overlay-bolder {}
-    .overlay-blurbg {}
+    // @include test-border;
+    .overlay-bolder {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        top: 0;
+        left: 0;
+        background-color: rgba(0,0,0,0.5);
+    }
+    .overlay-blurbg {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        top: 0;
+        left: 0;
+        background-color: rgba(255,255,255,0.1);
+        backdrop-filter: blur(4px);
+    }
     .privacypolicy {
-        &__cross {}
-        &__text {}
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid rgb(128,128,128);
+        background-color: rgb(255,255,255);
+        width: 450px;
+        height: 600px;
+        overflow: scroll;
+        padding: 20px;
+        &__cross {
+            position: relative;
+            left: 95%;
+            border: none;
+            background-color: transparent;
+            color: var(--defaultColor);
+            cursor: pointer;
+            @include df-center();
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            font-weight: 600;
+            font-size: 18px;
+        }
+        &__text {
+            margin-top: 20px;
+            font-size: 16px;
+            background-color: rgb(255,255,255);
+            color: var(--defaultColor);
+        }
     }
     .termsofuse {
-        &__cross {}
-        &__text {}
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid rgb(128,128,128);
+        background-color: rgb(255,255,255);
+        width: 450px;
+        height: 600px;
+        overflow: scroll;
+        padding: 20px;
+        &__cross {
+            position: relative;
+            left: 95%;
+            border: none;
+            background-color: transparent;
+            color: var(--defaultColor);
+            cursor: pointer;
+            @include df-center();
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            font-weight: 600;
+            font-size: 18px;
+        }
+        &__text {
+            margin-top: 20px;
+            font-size: 16px;
+            background-color: rgb(255,255,255);
+            color: var(--defaultColor);
+        }
     }
     .comingsoon {
-        &__cross {}
-        &__image {
-            &--symbol {}
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        border: 1px solid rgb(128,128,128);
+        background-color: rgb(255,255,255);
+        width: 500px;
+        height: 400px;
+        border-radius: 10px;
+        filter: drop-shadow(0px 0px 10px rgba(0,0,0,0.5));
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 20px;
+        &__cross {
+            position: relative;
+            top: 10px;
+            left: 45%;
+            border: none;
+            background-color: transparent;
+            color: var(--defaultColor);
+            cursor: pointer;
+            @include df-center();
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            font-weight: 600;
+            font-size: 18px;
+            transition: var(--slow-fx);
+            &:hover {
+                filter: brightness(1.2);
+                scale: 1.05;
+                transition: var(--slow-fx);
+            }
         }
-        &__text {}
-        &__ok {}
+        &__image {
+            border: 6px solid rgba(0,0,0,1);
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            overflow: hidden;
+            position: relative;
+            background-color: rgba(255,255,0,1);
+            animation: alert 1.1s ease-in-out 0s 1;
+            &--symbol {
+                width: 70%;
+                object-fit: cover;
+                position: absolute;
+                top: 45%;
+                left: 50%;
+                transform: translate(-50%,-50%)
+            }
+        }
+        &__text {
+            font-size: 20px;
+            filter: drop-shadow(0px 0px 5px rgb(255,0,0));
+            color: rgb(8,0,0);
+        }
+        &__ok {
+            margin-bottom: 40px;
+            width: 70px;
+            height: 34px;
+            font-size: 16px;
+            font-weight: 500;
+            color: rgb(255,255,255);
+            border: 1px solid rgb(0,0,0);
+            border-radius: 5px;
+            background-color: rgb(16,16,16);
+            transition: var(--slow-fx);
+            &:hover {
+                filter: brightness(1.2);
+                scale: 1.05;
+                transition: var(--slow-fx);
+            }
+        }
+        @keyframes alert {
+            0% {rotate: 0deg;}
+            10% {rotate: 0deg;}
+            20% {rotate: 30deg;}
+            30% {rotate: -25deg;}
+            40% {rotate: 20deg;}
+            50% {rotate: -15deg;}
+            60% {rotate: 10deg;}
+            70% {rotate: 0deg;}
+            100% {rotate: 0deg;}
+        }
     }
 }
 // •| #(POP-UP WINDOWS) end |◄◄◄◄◄◄◄◄◄◄
